# Bayesian-Hierarchical-Mixture-Clustering-Model

./: .gitignore  BHMM.py  BHMM_simulated_bivariate_data.ipynb  LICENSE  README.md  data_pyro_men_subsample.csv  pyproject.toml
bhmm/: BHMM.py  __init__.py
