[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bhmm"
requires-python = ">=3.11"
authors = [{name = "Victor Lhoste", email = "victor.lhoste19@imperial.ac.uk"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

dependencies = [
    "numpyro==0.13.0",
    "pandas==2.2.2",
    "seaborn==0.13.2",
    "ipykernel==6.29.4",
    "scikit-learn==1.4.2",
    "flit==3.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.3.7",
]

[tool.ruff]
extend-include = ["*.ipynb"]
exclude = []
lint.ignore = ["F722", "F821"]
